--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>Testovací úloha - Jiří Szlachta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Testovací úloha poski.com. Stráveno cca 4h, včetně hledání přístupu na github. Hover efekt na článku je pouze při najetí na nadpis / label.">
+    <meta name="author" content="Jiri Szlachta">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="./dist/style.css">
 </head>
 
@@ -22,6 +25,7 @@
                     <a href="/" title="The Blog">
                         <img src="images/logo.svg" alt="Logo The Blog" height="50px">
                     </a>
+                    <h1>The Blog about...</h1>
                 </div>
                 <div class="search-icon">
                     <img src="images/magnifying-glass-svgrepo-com.svg" alt="Search The Blog" height="30px">
