--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Testovací úloha poski.com. Stráveno cca 4h, včetně hledání přístupu na github. Hover efekt na článku je pouze při najetí na nadpis / label.">
     <meta name="author" content="Jiri Szlachta">
     <meta name="robots" content="index, follow">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="./dist/style.css">
 </head>
 
